lab1/Test/L1-A-7-79.cmm
int ;
int roAIdpX5GG2j4w 
;
int ^mZ_p4sW6QzEKp_HR612 ( struct l60v7DjwmegUgouRvARY 
  mVDbRfgF ) {
  float UX0dS = tUjKSU7xEXU8mdhV && ve >= V9tkZDi3CM51dliKZp 
    * ! - - ! - leADst [ MRMXLINClm8rGFVEUIiO = fMPd4821OKJfwJG9pY 
    || yX6Xfd != leS8UjuvzRMJkYWx7iX - gl ( BMBHPEK8B9N5tP9 
    == tfGbWw6WFv32LZlrt / ! ( AM || UD :< hso / C2poh_cUK 
    ( f7T6 , G3z6TihectlUjTYwa > pwA0nZMkO && ! 2127009770.545184669 
    . Yxzs ) ) <= - - J3njfZOTXw7vMds3 ) + y5Pg82UQxTxTe 
    ( ) ] . SRDi9L0IMqDyEVw / 1559011929 , ML11RxQ5Dat 
    [ 1875968212 ] ;
}
int ;
int ;
struct NjuKsu1B ;
struct {
  struct r9 Iy5F3 ;
};
int hpAaX2kVKV0 , WPLA1EGvCasg_ 

;
int ;
int oWncJhQalmQ ( ) {
  d ;
  EynCOXrZShd ;
  while ( oEQ9e )   while ( UJ2nJKs5_YL03Y6VWU )   gSo6haCsPC 
    ;


  if ( iVjX52xDoI1HRoWz3UM )   if ( uQLrr ) {
  }else   if ( Xdx9Y )   if ( yjl )   c8nEaNuAJ16wBK 
    ;
else   while ( boDDSW8fTHb0 ) {
    int z4XUneNWLh638Y #;
  }

else   if ( yFk9ve0fcTqxCQ9wbXs )   return io2OWCQuLcBws 
    ;




  U4ZuHGKiKPzNGEr ;
}
int ;
int ;
int ;
int gA12CUx ( ) {
}
int ;
int EGrB4lUV3VOqsKUp0zs ( int zxJ5E7rQfEDqbYpCr , 
  int ex2KGZlbm4 @) {
}
int ;
struct {
  struct n3ktUsdaux1KB2YDG_ {
  }nRhJlLFEG58XQY ;
  int E3Xt4kzDEaH4NjCft9i ;
};
